--- a/banking-app/backend/pom.xml
+++ b/banking-app/backend/pom.xml
@@ -8,20 +8,49 @@
     <version>1.0-SNAPSHOT</version>
 
     <dependencies>
+        <!-- Jakarta EE (EJB, JAX-RS, JPA) Dependencies -->
+        <dependency>
+            <groupId>jakarta.platform</groupId>
+            <artifactId>jakartaee-api</artifactId>
+            <version>8.0.0</version>
+            <scope>provided</scope> <!-- Provided by WildFly -->
+        </dependency>
+
+        <!-- JAX-RS (REST API) Dependency -->
         <dependency>
             <groupId>org.glassfish.jersey.core</groupId>
             <artifactId>jersey-server</artifactId>
             <version>2.35</version>
         </dependency>
+
+        <!-- Hibernate Core for JPA -->
         <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-core</artifactId>
             <version>5.4.32.Final</version>
         </dependency>
+
+        <!-- PostgreSQL JDBC Driver -->
         <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
             <version>42.2.23</version>
         </dependency>
+
+        <!-- Other dependencies (if needed) -->
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.1</version>
+                <configuration>
+                    <source>11</source> <!-- or use 1.8 if targeting Java 8 -->
+                    <target>11</target> <!-- or use 1.8 if targeting Java 8 -->
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
