--- a/banking-app/backend/pom.xml
+++ b/banking-app/backend/pom.xml
@@ -8,12 +8,12 @@
     <version>1.0-SNAPSHOT</version>
 
     <dependencies>
-        <!-- Jakarta EE (EJB, JAX-RS, JPA) Dependencies -->
+        <!-- Jakarta EE 9.1 API (includes EJB, JAX-RS, JPA) -->
         <dependency>
             <groupId>jakarta.platform</groupId>
             <artifactId>jakartaee-api</artifactId>
-            <version>8.0.0</version>
-            <scope>provided</scope> <!-- Provided by WildFly -->
+            <version>9.1.0</version>
+            <scope>provided</scope> <!-- Provided by WildFly or Payara -->
         </dependency>
 
         <!-- JAX-RS (REST API) Dependency -->
@@ -37,8 +37,16 @@
             <version>42.2.23</version>
         </dependency>
 
-        <!-- Other dependencies (if needed) -->
+        <!-- Other dependencies if needed -->
     </dependencies>
+
+    <!-- Repositories to fetch Jakarta EE dependencies -->
+    <repositories>
+        <repository>
+            <id>eclipse</id>
+            <url>https://repo.eclipse.org/content/repositories/jakarta-release/</url>
+        </repository>
+    </repositories>
 
     <build>
         <plugins>
@@ -47,8 +55,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.1</version>
                 <configuration>
-                    <source>11</source> <!-- or use 1.8 if targeting Java 8 -->
-                    <target>11</target> <!-- or use 1.8 if targeting Java 8 -->
+                    <source>11</source> <!-- Adjust if you're using Java 8 or other versions -->
+                    <target>11</target> <!-- Adjust if you're using Java 8 or other versions -->
                 </configuration>
             </plugin>
         </plugins>
