--- a/banking-app/backend/pom.xml
+++ b/banking-app/backend/pom.xml
@@ -8,12 +8,12 @@
     <version>1.0-SNAPSHOT</version>
 
     <dependencies>
-        <!-- Jakarta EE 8 API (includes EJB, JAX-RS, JPA) -->
+        <!-- Jakarta EE 8 API -->
         <dependency>
-            <groupId>javax.platform</groupId>
-            <artifactId>javaxee-api</artifactId>
-            <version>8.0.0</version>
-            <scope>provided</scope> <!-- Provided by WildFly or Payara -->
+            <groupId>javax</groupId>
+            <artifactId>javaee-api</artifactId>
+            <version>8.0</version>
+            <scope>provided</scope>
         </dependency>
 
         <!-- JAX-RS (REST API) Dependency -->
