--- a/banking-app/frontend/Dockerfile
+++ b/banking-app/frontend/Dockerfile
@@ -1,10 +1,12 @@
+# Use the official WildFly image as the base
 FROM jboss/wildfly:latest
 
-# Set working directory
+# Set the working directory in the container
 WORKDIR /opt/jboss/wildfly
 
-# Copy the war file (generated during Maven build) to the WildFly deployment folder
-COPY target/frontend.war /opt/jboss/wildfly/standalone/deployments/
+# Copy the jar file (generated during Maven build) to the WildFly deployment folder
+COPY target/frontend-1.0-SNAPSHOT.jar /opt/jboss/wildfly/standalone/deployments/
 
-# Expose port
+# Expose port 8080
 EXPOSE 8080
+
