--- a/banking-app/backend/Dockerfile
+++ b/banking-app/backend/Dockerfile
@@ -1,10 +1,11 @@
+# Use the official WildFly image as the base
 FROM jboss/wildfly:latest
 
-# Set working directory
+# Set the working directory in the container
 WORKDIR /opt/jboss/wildfly
 
-# Copy the war file (generated during Maven build) to the WildFly deployment folder
-COPY target/backend.war /opt/jboss/wildfly/standalone/deployments/
+# Copy the jar file (generated during Maven build) to the WildFly deployment folder
+COPY target/backend-1.0-SNAPSHOT.jar /opt/jboss/wildfly/standalone/deployments/
 
-# Expose port
-EXPOSE 8081
+# Expose port 8080 (default port for WildFly)
+EXPOSE 8080
